feat(bank profile): create API endpoints
